--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,10 +12,10 @@ Authors@R:
              role = "aut",
              email = "bernd_bischl@gmx.net",
              comment = c(ORCID = "0000-0001-6002-6980")))
-Description: Implements hyperband method for hyperparameter tuning. 
-    Various termination criteria can be set and combined. The class 'AutoTuner'
-    provides a convenient way to perform nested resampling in combination with
-    'mlr3'.
+Description: Implements hyperband method for hyperparameter
+    tuning.  Various termination criteria can be set and combined. The
+    class 'AutoTuner' provides a convenient way to perform nested
+    resampling in combination with 'mlr3'.
 License: LGPL-3
 URL: https://mlr3tuning.mlr-org.com,
     https://github.com/mlr-org/mlr3hyperband
@@ -32,14 +32,15 @@ Imports:
     paradox,
     R6
 Suggests:
+    ecr,
     GenSA,
     knitr,
     rpart,
     testthat
 Remotes:
+    mlr-org/mlr3,
     mlr-org/mlr3misc,
-    mlr-org/mlr3tuning,
-    mlr-org/mlr3
+    mlr-org/mlr3tuning
 Encoding: UTF-8
 NeedsCompilation: no
 Roxygen: list(markdown = TRUE)
