--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,7 @@ URL: https://mlr3tuning.mlr-org.com,
     https://github.com/mlr-org/mlr3hyperband
 BugReports: https://github.com/mlr-org/mlr3hyperband/issues
 Depends:
-    R (>= 3.1.0)
+    R (>= 3.5.2)
 Imports:
     checkmate (>= 1.9.4),
     data.table,
@@ -48,5 +48,5 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.1
 Collate:
     'TunerHyperband.R'
-    'wip_nds_hv_rank.R'
+    'nds_selection.R'
     'zzz.R'
