--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,11 +32,10 @@ Imports:
     paradox,
     R6
 Suggests:
-    ecr,
     emoa,
-    GenSA,
     knitr,
-    rpart,
+    mlr3pipelines,
+    mlr3learners,
     testthat
 Remotes:
     mlr-org/mlr3,
