--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,7 @@ URL: https://mlr3tuning.mlr-org.com,
     https://github.com/mlr-org/mlr3hyperband
 BugReports: https://github.com/mlr-org/mlr3hyperband/issues
 Depends:
-    R (>= 3.5.0)
+    R (>= 3.1.0)
 Imports:
     checkmate (>= 1.9.4),
     data.table,
@@ -39,6 +39,7 @@ Suggests:
     xgboost,
     rpart,
     testthat
+RdMacros: mlr3misc
 Remotes:
     mlr-org/mlr3,
     mlr-org/mlr3misc,
