--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,7 @@ Description: Implements hyperband method for hyperparameter
     class 'AutoTuner' provides a convenient way to perform nested
     resampling in combination with 'mlr3'.
 License: LGPL-3
-URL: https://mlr3tuning.mlr-org.com,
+URL: https://mlr3hyperband.mlr-org.com,
     https://github.com/mlr-org/mlr3hyperband
 BugReports: https://github.com/mlr-org/mlr3hyperband/issues
 Depends:
