fixed devtools check

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -9,7 +9,10 @@
 ^\.Rproj\.user$
 ^man-roxygen$
 ^attic$
+^codecov$
 ^pkgdown$
 ^inst/extdata/.+\.R$
 ^README\.Rmd$
 ^revdep$
+^_pkgdown\.yml$
+^docs$
