--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,12 +34,13 @@ Imports:
 Suggests:
     emoa,
     knitr,
-    mlr3pipelines,
     mlr3learners,
-    xgboost,
+    mlr3pipelines,
     rpart,
-    testthat
-RdMacros: mlr3misc
+    testthat,
+    xgboost
+RdMacros: 
+    mlr3misc
 Encoding: UTF-8
 NeedsCompilation: no
 Roxygen: list(markdown = TRUE)
@@ -48,4 +49,3 @@ Collate:
     'TunerHyperband.R'
     'nds_selection.R'
     'zzz.R'
-
