--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,6 +41,8 @@ Suggests:
     xgboost
 RdMacros: 
     mlr3misc
+Remotes: 
+  mlr-org/mlr3tuning
 Encoding: UTF-8
 NeedsCompilation: no
 Roxygen: list(markdown = TRUE)
