--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,6 +32,7 @@ Imports:
     paradox,
     R6
 Suggests:
+    bibtex,
     emoa,
     knitr,
     mlr3learners,
@@ -42,11 +43,11 @@ Suggests:
 RdMacros: 
     mlr3misc
 Remotes: 
-  mlr-org/mlr3tuning
+    mlr-org/mlr3tuning
 Encoding: UTF-8
 NeedsCompilation: no
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.0
 Collate:
     'TunerHyperband.R'
     'nds_selection.R'
