add plotting functionality, ggplot

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,6 +30,7 @@ Imports:
     mlr3misc,
     mlr3tuning,
     paradox,
+    ggplot2,    
     R6
 Suggests:
     bibtex,
@@ -39,7 +40,8 @@ Suggests:
     mlr3pipelines,
     rpart,
     testthat,
-    xgboost
+    xgboost,
+    reshape2
 RdMacros: 
     mlr3misc
 Remotes: 
@@ -51,4 +53,6 @@ RoxygenNote: 7.1.0
 Collate:
     'TunerHyperband.R'
     'nds_selection.R'
+    'plot_TuningInstance.R'
     'zzz.R'
+    
