--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,11 @@ Authors@R:
              role = c("cre", "aut"),
              email = "gruber_sebastian@t-online.de",
              comment = c(ORCID = "0000-0002-8544-3470")),
+      person(given = "Jakob",
+             family = "Richter",
+             role = "aut",
+             email = "jakob1richter@gmail.com",
+             comment = c(ORCID = "0000-0003-4481-5554")),
       person(given = "Bernd",
              family = "Bischl",
              role = "aut",
@@ -29,6 +34,7 @@ Imports:
     mlr3,
     mlr3misc,
     mlr3tuning,
+    bbotk,
     paradox,
     R6
 Suggests:
@@ -40,9 +46,9 @@ Suggests:
     rpart,
     testthat,
     xgboost
-RdMacros: 
+RdMacros:
     mlr3misc
-Remotes: 
+Remotes:
     mlr-org/mlr3tuning
 Encoding: UTF-8
 NeedsCompilation: no
