--- a/.github/workflows/update-tic.yml
+++ b/.github/workflows/update-tic.yml
@@ -17,6 +17,10 @@ jobs:
         config:
           - { os: macOS-latest, r: "release" }
 
+    env:
+      # use GITHUB_TOKEN from GItHub to workaround rate limits in {remotes}
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+
     steps:
       - uses: actions/checkout@v2
         with:
@@ -31,7 +35,7 @@ jobs:
         run: |
             brew install curl libsodium
             Rscript -e "if (!requireNamespace('remotes')) install.packages('remotes', type = 'source')"
-            Rscript -e "remotes::install_github('ropensci/tic@update-yaml', dependencies = TRUE)" -e "print(tic::dsl_load())" -e "tic::prepare_all_stages()" -e "tic::before_install()" -e "tic::install()"
+            Rscript -e "remotes::install_github('ropensci/tic', dependencies = TRUE)" -e "print(tic::dsl_load())" -e "tic::prepare_all_stages()" -e "tic::before_install()" -e "tic::install()"
 
       - name: "[Stage] Update YAMLs"
         run: |
