add JM as author

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,11 @@ Authors@R:
              role = "aut",
              email = "jakob1richter@gmail.com",
              comment = c(ORCID = "0000-0003-4481-5554")),
+      person(given = "Julia",
+             family = "Moosbauer",
+             role = "aut",
+             email = "ju.moosbauer@googlemail.com",
+             comment = c(ORCID = "0000-0002-0000-9297")),
       person(given = "Bernd",
              family = "Bischl",
              role = "aut",
