--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -55,6 +55,7 @@ RdMacros:
     mlr3misc
 Remotes:
     mlr-org/mlr3tuning
+    mlr-org/paradox
 Encoding: UTF-8
 NeedsCompilation: no
 Roxygen: list(markdown = TRUE)
