--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -54,7 +54,7 @@ Suggests:
 RdMacros:
     mlr3misc
 Remotes:
-    mlr-org/mlr3tuning
+    mlr-org/mlr3tuning,
     mlr-org/paradox
 Encoding: UTF-8
 NeedsCompilation: no
