--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,15 @@
 Package: mlr3hyperband
 Title: Hyperband for 'mlr3'
-Version: 0.0.0.9000
+Version: 0.1.0
 Authors@R:
-    c(person(given = "Sebastian",
+    c(person(given = "Marc",
+             family = "Becker",
+             role = c("aut", "cre"),
+             email = "marcbecker@posteo.de",
+             comment = c(ORCID = "0000-0002-8115-0400")),
+      person(given = "Sebastian",
              family = "Gruber",
-             role = c("cre", "aut"),
+             role = "aut",
              email = "gruber_sebastian@t-online.de",
              comment = c(ORCID = "0000-0002-8544-3470")),
       person(given = "Jakob",
@@ -33,13 +38,13 @@ BugReports: https://github.com/mlr-org/mlr3hyperband/issues
 Depends:
     R (>= 3.1.0)
 Imports:
+    bbotk (>= 0.2.0),
     checkmate (>= 1.9.4),
     data.table,
     lgr,
     mlr3,
     mlr3misc,
-    mlr3tuning,
-    bbotk,
+    mlr3tuning (>= 0.2.0),
     paradox,
     R6
 Suggests:
