--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -55,6 +55,11 @@ Suggests:
     rpart,
     testthat,
     xgboost
+Remotes:
+    mlr-org/mlr3@continue
+    mlr-org/mlr3learners@continue
+    mlr-org/mlr3tuning@continue
+    mlr-org/bbotk@continue
 RdMacros:
     mlr3misc
 Encoding: UTF-8
