--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -56,9 +56,9 @@ Suggests:
     testthat,
     xgboost
 Remotes:
-    mlr-org/mlr3@continue
-    mlr-org/mlr3learners@continue
-    mlr-org/mlr3tuning@continue
+    mlr-org/mlr3@continue,
+    mlr-org/mlr3learners@continue,
+    mlr-org/mlr3tuning@continue,
     mlr-org/bbotk@continue
 RdMacros:
     mlr3misc
