--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -68,5 +68,6 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Collate:
     'TunerHyperband.R'
+    'TunerSuccessiveHalving.R'
     'nds_selection.R'
     'zzz.R'
