--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,21 +44,18 @@ Imports:
     checkmate (>= 1.9.4),
     data.table,
     lgr,
-    mlr3,
+    mlr3 (>= 0.6.0),
     mlr3misc,
     mlr3tuning (>= 0.2.0),
     paradox,
     R6
 Suggests:
-    bibtex,
     emoa,
     mlr3learners,
     mlr3pipelines,
     rpart,
     testthat,
     xgboost
-RdMacros:
-    mlr3misc
 Encoding: UTF-8
 NeedsCompilation: no
 Roxygen: list(markdown = TRUE)
@@ -66,4 +63,5 @@ RoxygenNote: 7.1.1
 Collate:
     'TunerHyperband.R'
     'nds_selection.R'
+    'bibentries.R'
     'zzz.R'
