--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,8 +30,8 @@ Authors@R:
 Description: Implements hyperband method for hyperparameter
     tuning.  Various termination criteria can be set and combined. The
     class 'AutoTuner' provides a convenient way to perform nested
-    resampling in combination with 'mlr3'. The hyperband algorithm was 
-    proposed by Lisha Li and Kevin Jamieson and Giulia DeSalvo and Afshin 
+    resampling in combination with 'mlr3'. The hyperband algorithm was
+    proposed by Lisha Li, Kevin Jamieson, Giulia DeSalvo, Afshin
     Rostamizadeh and Ameet Talwalkar (2018) <arXiv:1603.06560>.
 License: LGPL-3
 URL: https://mlr3hyperband.mlr-org.com,
