--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -7,25 +7,33 @@ template:
   default_assets: false
 
 development:
-  destination: dev
+  mode: auto
   version_label: default
-  version_tooltip: "Development version"
+  version_tooltip: "Version"
 
 toc:
   depth: 3
 
 navbar:
   structure:
-    left:  [reference, news]
-    right: [github, slack, stackoverflow, rss]
+    left:  [reference, news, book]
+    right: [github, mattermost, stackoverflow, rss]
   components:
     home: ~
-    slack:
-      icon: fab fa-slack
-      href: https://mlr-org.slack.com
+    reference:
+      icon: fa fa-file-alt
+      text: Reference
+      href: reference/index.html
+    mattermost:
+      icon: fa fa-comments
+      href: https://lmmisld-lmu-stats-slds.srv.mwn.de/mlr_invite/
+    book:
+      text: mlr3book
+      icon: fa fa-link
+      href: https://mlr3book.mlr-org.com
     stackoverflow:
       icon: fab fa-stack-overflow
-      href: https://stackoverflow.com/questions/tagged/mlr3
+      href: https://stackoverflow.com/questions/tagged/mlr
     rss:
       icon: fa-rss
       href: https://mlr-org.com/
