--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -64,6 +64,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Collate:
     'TunerHyperband.R'
+    'TunerSuccessiveHalving.R'
     'nds_selection.R'
     'bibentries.R'
     'zzz.R'
