--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -45,7 +45,7 @@ Imports:
     data.table,
     lgr,
     mlr3 (>= 0.7.0),
-    mlr3misc,
+    mlr3misc (>= 0.7.0),
     mlr3tuning (>= 0.2.0),
     paradox,
     R6
