--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -57,7 +57,7 @@ Suggests:
     testthat,
     xgboost
 Remotes:
-    mlr-org/bbotk
+    mlr-org/bbotk,
     mlr-org/paradox
 Encoding: UTF-8
 NeedsCompilation: no
