Use testthat v3 and make mlr3tuning depends

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,6 +38,7 @@ URL: https://mlr3hyperband.mlr-org.com,
     https://github.com/mlr-org/mlr3hyperband
 BugReports: https://github.com/mlr-org/mlr3hyperband/issues
 Depends:
+    mlr3tuning (>= 0.5.0),
     R (>= 3.1.0)
 Imports:
     bbotk (>= 0.2.0),
@@ -46,7 +47,6 @@ Imports:
     lgr,
     mlr3 (>= 0.7.0),
     mlr3misc (>= 0.7.0),
-    mlr3tuning (>= 0.2.0),
     paradox,
     R6
 Suggests:
@@ -59,6 +59,8 @@ Suggests:
 Remotes:
     mlr-org/bbotk,
     mlr-org/paradox
+Config/testthat/edition: 3
+Config/testthat/parallel: true
 Encoding: UTF-8
 NeedsCompilation: no
 Roxygen: list(markdown = TRUE)
