Use mlr3tuning test files

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,16 +38,16 @@ URL: https://mlr3hyperband.mlr-org.com,
     https://github.com/mlr-org/mlr3hyperband
 BugReports: https://github.com/mlr-org/mlr3hyperband/issues
 Depends:
-    mlr3tuning (>= 0.5.0),
+    mlr3tuning (>= 0.5.0.9000),
     R (>= 3.1.0)
 Imports:
-    bbotk (>= 0.2.0),
+    bbotk (>= 0.2.0.9000),
     checkmate (>= 1.9.4),
     data.table,
     lgr,
     mlr3 (>= 0.7.0),
     mlr3misc (>= 0.7.0),
-    paradox,
+    paradox(>= 0.6.0-9000),
     R6
 Suggests:
     emoa,
@@ -58,6 +58,7 @@ Suggests:
     xgboost
 Remotes:
     mlr-org/bbotk,
+    mlr-org/mlr3tuning,
     mlr-org/paradox
 Config/testthat/edition: 3
 Config/testthat/parallel: true
