--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mlr3hyperband
 Title: Hyperband for 'mlr3'
-Version: 0.1.1.9000
+Version: 0.1.2
 Authors@R:
     c(person(given = "Marc",
              family = "Becker",
@@ -38,28 +38,24 @@ URL: https://mlr3hyperband.mlr-org.com,
     https://github.com/mlr-org/mlr3hyperband
 BugReports: https://github.com/mlr-org/mlr3hyperband/issues
 Depends:
-    mlr3tuning (>= 0.5.0.9000),
+    mlr3tuning (>= 0.6.0),
     R (>= 3.1.0)
 Imports:
-    bbotk (>= 0.2.0.9000),
+    bbotk (>= 0.3.0),
     checkmate (>= 1.9.4),
     data.table,
     lgr,
     mlr3 (>= 0.7.0),
     mlr3misc (>= 0.7.0),
-    paradox(>= 0.6.0-9000),
+    paradox (>= 0.7.0),
     R6
 Suggests:
     emoa,
     mlr3learners,
     mlr3pipelines,
     rpart,
-    testthat,
+    testthat (>= 3.0.0),
     xgboost
-Remotes:
-    mlr-org/bbotk,
-    mlr-org/mlr3tuning,
-    mlr-org/paradox
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 Encoding: UTF-8
