--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -66,6 +66,7 @@ Collate:
     'TunerHyperband.R'
     'TunerSuccessiveHalving.R'
     'OptimizerHyperband.R'
+    'OptimizerSuccessiveHalving.R'
     'nds_selection.R'
     'bibentries.R'
     'zzz.R'
