--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -64,7 +64,9 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Collate:
     'TunerHyperband.R'
+    'TunerSuccessiveHalving.R'
     'OptimizerHyperband.R'
+    'OptimizerSuccessiveHalving.R'
     'nds_selection.R'
     'bibentries.R'
     'zzz.R'
