--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -66,8 +66,10 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Collate:
     'TunerHyperband.R'
+    'TunerHyperStage.R'
     'TunerSuccessiveHalving.R'
     'OptimizerHyperband.R'
+    'OptimizerHyperStage.R'
     'OptimizerSuccessiveHalving.R'
     'nds_selection.R'
     'bibentries.R'
