--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,9 @@ export(OptimizerHyperband)
 export(OptimizerSuccessiveHalving)
 export(TunerHyperband)
 export(TunerSuccessiveHalving)
+export(hyperband_budget)
+export(hyperband_n_configs)
+export(hyperband_schedule)
 import(bbotk)
 import(checkmate)
 import(data.table)
