--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -56,6 +56,8 @@ Suggests:
     rpart,
     testthat (>= 3.0.0),
     xgboost
+Remotes:
+    mlr-org/bbotk
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 Encoding: UTF-8
@@ -67,6 +69,5 @@ Collate:
     'TunerSuccessiveHalving.R'
     'OptimizerHyperband.R'
     'OptimizerSuccessiveHalving.R'
-    'nds_selection.R'
     'bibentries.R'
     'zzz.R'
