--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -57,7 +57,7 @@ Suggests:
     testthat (>= 3.0.0),
     xgboost
 Remotes:
-    mlr-org/mlr3tuning
+    mlr-org/mlr3tuning,
     mlr-org/bbotk
 Config/testthat/edition: 3
 Config/testthat/parallel: true
