--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,10 +38,10 @@ URL: https://mlr3hyperband.mlr-org.com,
     https://github.com/mlr-org/mlr3hyperband
 BugReports: https://github.com/mlr-org/mlr3hyperband/issues
 Depends:
-    mlr3tuning (>= 0.9.0),
+    mlr3tuning (>= 0.9.0.9000),
     R (>= 3.1.0)
 Imports:
-    bbotk (>= 0.4.0),
+    bbotk (>= 0.4.0.9000),
     checkmate (>= 1.9.4),
     data.table,
     lgr,
@@ -57,6 +57,7 @@ Suggests:
     testthat (>= 3.0.0),
     xgboost
 Remotes:
+    mlr-org/mlr3tuning,
     mlr-org/bbotk
 Config/testthat/edition: 3
 Config/testthat/parallel: true
@@ -70,4 +71,5 @@ Collate:
     'OptimizerHyperband.R'
     'OptimizerSuccessiveHalving.R'
     'bibentries.R'
+    'helper.R'
     'zzz.R'
