--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -57,8 +57,8 @@ Suggests:
     testthat (>= 3.0.0),
     xgboost
 Remotes:
-    mlr-org/mlr3tuning,
-    mlr-org/bbotk
+    mlr-org/mlr3tuning@async,
+    mlr-org/bbotk@async
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 Encoding: UTF-8
