--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -67,8 +67,10 @@ NeedsCompilation: no
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Collate:
+    'TunerAsha.R'
     'TunerHyperband.R'
     'TunerSuccessiveHalving.R'
+    'OptimizerAsha.R'
     'OptimizerHyperband.R'
     'OptimizerSuccessiveHalving.R'
     'bibentries.R'
