--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -57,7 +57,7 @@ Suggests:
     testthat (>= 3.0.0),
     xgboost
 Remotes:
-    mlr-org/mlr3@hotstart_db,
+    mlr-org/mlr3@allow_db_hotstart,
     mlr-org/mlr3tuning@async,
     mlr-org/bbotk@async
 Config/testthat/edition: 3
