--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -69,9 +69,11 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Collate:
     'TunerAsha.R'
+    'TunerAhb.R'
     'TunerHyperband.R'
     'TunerSuccessiveHalving.R'
     'OptimizerAsha.R'
+    'OptimizerAhb.R'
     'OptimizerHyperband.R'
     'OptimizerSuccessiveHalving.R'
     'bibentries.R'
