move legacy versions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,12 @@
 export(OptimizerAhb)
 export(OptimizerAsha)
 export(OptimizerHyperband)
+export(OptimizerHyperbandLegacy)
 export(OptimizerSuccessiveHalving)
 export(TunerAhb)
 export(TunerAsha)
 export(TunerHyperband)
+export(TunerHyperbandLegacy)
 export(TunerSuccessiveHalving)
 export(hyperband_budget)
 export(hyperband_n_configs)
