--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -72,10 +72,12 @@ Collate:
     'TunerAhb.R'
     'TunerHyperband.R'
     'TunerSuccessiveHalving.R'
+    'TunerHyperbandLegacy.R'
     'OptimizerAsha.R'
     'OptimizerAhb.R'
     'OptimizerHyperband.R'
     'OptimizerSuccessiveHalving.R'
+    'OptimizerHyperbandLegacy.R'
     'bibentries.R'
     'helper.R'
     'zzz.R'
