--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: mlr3hyperband
-Title: Hyperband for 'mlr3'
+Title: Successive Halving and Hyperband Algorithms for 'mlr3'
 Version: 0.2.0.9000
 Authors@R:
     c(person(given = "Marc",
@@ -27,12 +27,13 @@ Authors@R:
              role = "aut",
              email = "bernd_bischl@gmx.net",
              comment = c(ORCID = "0000-0001-6002-6980")))
-Description: Implements hyperband method for hyperparameter
-    tuning.  Various termination criteria can be set and combined. The
-    class 'AutoTuner' provides a convenient way to perform nested
-    resampling in combination with 'mlr3'. The hyperband algorithm was
-    proposed by Lisha Li, Kevin Jamieson, Giulia DeSalvo, Afshin
-    Rostamizadeh and Ameet Talwalkar (2018) <arXiv:1603.06560>.
+Description: Multifidelity optimization algorithms based on the successive
+    halving algorithm. Implements the successive halving, asynchronous
+    successive halving, hyperband and asynchronous hyperband algorithm as
+    general purpose optimizers for 'bbotk' and tuners for `mlr3tuning`. Various
+    termination criteria can be set and combined. If possible learners are
+    hotstarted to accelerate tuning. The class 'AutoTuner' provides a convenient
+    way to perform nested resampling in combination with 'mlr3'.
 License: LGPL-3
 URL: https://mlr3hyperband.mlr-org.com,
     https://github.com/mlr-org/mlr3hyperband
@@ -68,16 +69,16 @@ NeedsCompilation: no
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Collate:
-    'TunerAsha.R'
-    'TunerAhb.R'
-    'TunerHyperband.R'
-    'TunerSuccessiveHalving.R'
-    'TunerHyperbandLegacy.R'
-    'OptimizerAsha.R'
     'OptimizerAhb.R'
+    'OptimizerAsha.R'
     'OptimizerHyperband.R'
-    'OptimizerSuccessiveHalving.R'
     'OptimizerHyperbandLegacy.R'
+    'OptimizerSuccessiveHalving.R'
+    'TunerAhb.R'
+    'TunerAsha.R'
+    'TunerHyperband.R'
+    'TunerHyperbandLegacy.R'
+    'TunerSuccessiveHalving.R'
     'bibentries.R'
     'helper.R'
     'zzz.R'
