--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,7 @@ Authors@R:
              role = "aut",
              email = "bernd_bischl@gmx.net",
              comment = c(ORCID = "0000-0001-6002-6980")))
-Description: Multifidelity optimization algorithms based on the successive
+Description: Multifidelity optimization methods based on the successive
     halving algorithm. Implements the successive halving, asynchronous
     successive halving, hyperband and asynchronous hyperband algorithm as
     general purpose optimizers for 'bbotk' and tuners for `mlr3tuning`. Various
