--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -61,7 +61,7 @@ Suggests:
 Remotes:
     mlr-org/mlr3@timestamp,
     mlr-org/mlr3tuning@async,
-    mlr-org/bbotk@async
+    mlr-org/bbotk@paper_2021_hyperband
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 Encoding: UTF-8
