--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -59,7 +59,7 @@ Suggests:
     testthat (>= 3.0.0),
     xgboost
 Remotes:
-    mlr-org/mlr3@timestamp,
+    mlr-org/mlr3@paper_2021_hyperband,
     mlr-org/mlr3tuning@async,
     mlr-org/bbotk@paper_2021_hyperband
 Config/testthat/edition: 3
