--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mlr3hyperband
 Title: Hyperband for 'mlr3'
-Version: 0.3.0
+Version: 0.3.0.9000
 Authors@R:
     c(person(given = "Marc",
              family = "Becker",
@@ -45,13 +45,13 @@ Imports:
     checkmate (>= 1.9.4),
     data.table,
     lgr,
-    mlr3 (>= 0.13.0),
+    mlr3 (>= 0.13.1),
     mlr3misc (>= 0.7.0),
     paradox (>= 0.7.0),
     R6
 Suggests:
     emoa,
-    mlr3learners,
+    mlr3learners (>= 0.5.2),
     mlr3pipelines,
     rpart,
     testthat (>= 3.0.0),
