--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -59,9 +59,9 @@ Suggests:
     testthat (>= 3.0.0),
     xgboost
 Remotes:
-    mlr-org/bbotk@paper_2021_hyperband
+    mlr-org/bbotk@paper_2021_hyperband,
     mlr-org/mlr3@paper_2021_hyperband,
-    mlr-org/mlr3tuning@paper_2021_hyperband,
+    mlr-org/mlr3tuning@paper_2021_hyperband
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 Encoding: UTF-8
