--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -59,8 +59,8 @@ Suggests:
     testthat (>= 3.0.0),
     xgboost
 Remotes:
-    mlr-org/bbotk@async
-    mlr-org/mlr3tuning@async,
+    mlr-org/bbotk@async,
+    mlr-org/mlr3tuning@async
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 Encoding: UTF-8
