--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,10 +38,10 @@ URL: https://mlr3hyperband.mlr-org.com,
     https://github.com/mlr-org/mlr3hyperband
 BugReports: https://github.com/mlr-org/mlr3hyperband/issues
 Depends:
-    mlr3tuning (>= 0.11.0),
+    mlr3tuning (>= 0.12.1),
     R (>= 3.1.0)
 Imports:
-    bbotk (>= 0.5.0),
+    bbotk (>= 0.5.0.9000),
     checkmate (>= 1.9.4),
     data.table,
     lgr,
@@ -56,6 +56,9 @@ Suggests:
     rpart,
     testthat (>= 3.0.0),
     xgboost
+Remotes:
+    mlr-org/bbotk,
+    mlr-org/mlr3tuning
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 Encoding: UTF-8
