--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,7 +41,7 @@ Depends:
     mlr3tuning (>= 0.13.0),
     R (>= 3.1.0)
 Imports:
-    bbotk (>= 0.5.2),
+    bbotk (>= 0.7.0),
     checkmate (>= 1.9.4),
     data.table,
     lgr,
@@ -56,6 +56,8 @@ Suggests:
     rpart,
     testthat (>= 3.0.0),
     xgboost
+Remotes:
+    mlr-org/bbotk@release
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 Encoding: UTF-8
