chore: bump version to 0.4.4

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,38 +1,24 @@
 Package: mlr3hyperband
 Title: Hyperband for 'mlr3'
-Version: 0.4.3.9000
-Authors@R:
-    c(person(given = "Marc",
-             family = "Becker",
-             role = c("aut", "cre"),
-             email = "marcbecker@posteo.de",
-             comment = c(ORCID = "0000-0002-8115-0400")),
-      person(given = "Sebastian",
-             family = "Gruber",
-             role = "aut",
-             email = "gruber_sebastian@t-online.de",
-             comment = c(ORCID = "0000-0002-8544-3470")),
-      person(given = "Jakob",
-             family = "Richter",
-             role = "aut",
-             email = "jakob1richter@gmail.com",
-             comment = c(ORCID = "0000-0003-4481-5554")),
-      person(given = "Julia",
-             family = "Moosbauer",
-             role = "aut",
-             email = "ju.moosbauer@googlemail.com",
-             comment = c(ORCID = "0000-0002-0000-9297")),
-      person(given = "Bernd",
-             family = "Bischl",
-             role = "aut",
-             email = "bernd_bischl@gmx.net",
-             comment = c(ORCID = "0000-0001-6002-6980")))
-Description: Implements hyperband method for hyperparameter
-    tuning.  Various termination criteria can be set and combined. The
-    class 'AutoTuner' provides a convenient way to perform nested
-    resampling in combination with 'mlr3'. The hyperband algorithm was
-    proposed by Lisha Li, Kevin Jamieson, Giulia DeSalvo, Afshin
-    Rostamizadeh and Ameet Talwalkar (2018) <arXiv:1603.06560>.
+Version: 0.4.4
+Authors@R:c(
+    person("Marc", "Becker", , "marcbecker@posteo.de", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0002-8115-0400")),
+    person("Sebastian", "Gruber", , "gruber_sebastian@t-online.de", role = "aut",
+           comment = c(ORCID = "0000-0002-8544-3470")),
+    person("Jakob", "Richter", , "jakob1richter@gmail.com", role = "aut",
+           comment = c(ORCID = "0000-0003-4481-5554")),
+    person("Julia", "Moosbauer", , "ju.moosbauer@googlemail.com", role = "aut",
+           comment = c(ORCID = "0000-0002-0000-9297")),
+    person("Bernd", "Bischl", , "bernd_bischl@gmx.net", role = "aut",
+           comment = c(ORCID = "0000-0001-6002-6980"))
+  )
+Description: Implements hyperband method for hyperparameter tuning.
+    Various termination criteria can be set and combined. The class
+    'AutoTuner' provides a convenient way to perform nested resampling in
+    combination with 'mlr3'. The hyperband algorithm was proposed by Lisha
+    Li, Kevin Jamieson, Giulia DeSalvo, Afshin Rostamizadeh and Ameet
+    Talwalkar (2018) <arXiv:1603.06560>.
 License: LGPL-3
 URL: https://mlr3hyperband.mlr-org.com,
     https://github.com/mlr-org/mlr3hyperband
