--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,12 +13,13 @@ Authors@R:c(
     person("Bernd", "Bischl", , "bernd_bischl@gmx.net", role = "aut",
            comment = c(ORCID = "0000-0001-6002-6980"))
   )
-Description: Implements hyperband method for hyperparameter tuning.
-    Various termination criteria can be set and combined. The class
-    'AutoTuner' provides a convenient way to perform nested resampling in
-    combination with 'mlr3'. The hyperband algorithm was proposed by Lisha
-    Li, Kevin Jamieson, Giulia DeSalvo, Afshin Rostamizadeh and Ameet
-    Talwalkar (2018) <arXiv:1603.06560>.
+Description: Successive Halving (Jamieson and Talwalkar (2016)
+    <arXiv:1502.07943>) and Hyperband (Li et al. 2018 <arXiv:1603.06560>)
+    optimization algorithm for the mlr3 ecosystem. The implementation in
+    mlr3hyperband features improved scheduling and parallelizes the evaluation
+    of configurations. The package includes tuners for hyperparameter
+    optimization in mlr3tuning and optimizers for black-box optimization in
+    bbotk.
 License: LGPL-3
 URL: https://mlr3hyperband.mlr-org.com,
     https://github.com/mlr-org/mlr3hyperband
