fix: unloading mlr3hyperband removes optimizers and tuners from the dictionaries.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,6 +50,7 @@ NeedsCompilation: no
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Collate:
+    'aaa.R'
     'OptimizerSuccessiveHalving.R'
     'OptimizerHyperband.R'
     'TunerHyperband.R'
