--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,6 +41,7 @@ Suggests:
     mlr3learners (>= 0.5.2),
     mlr3pipelines,
     rpart,
+    rush,
     testthat (>= 3.0.0),
     xgboost
 Config/testthat/edition: 3
@@ -51,8 +52,10 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Collate:
     'aaa.R'
+    'OptimizerASHA.R'
     'OptimizerSuccessiveHalving.R'
     'OptimizerHyperband.R'
+    'TunerASHA.R'
     'TunerHyperband.R'
     'TunerSuccessiveHalving.R'
     'bibentries.R'
