--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,6 +44,10 @@ Suggests:
     rush,
     testthat (>= 3.0.0),
     xgboost
+Remotes:
+    mlr-org/rush,
+    mlr-org/bbotk@rush,
+    mlr-org/mlr3tuning@rush,
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 Encoding: UTF-8
