--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,6 +43,9 @@ Suggests:
     rpart,
     testthat (>= 3.0.0),
     xgboost
+Remotes:
+    mlr-org/mlr3tuning,
+    mlr-org/bbotk
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 Encoding: UTF-8
