--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -54,10 +54,10 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Collate:
     'aaa.R'
-    'OptimizerSuccessiveHalving.R'
-    'OptimizerHyperband.R'
-    'TunerHyperband.R'
-    'TunerSuccessiveHalving.R'
+    'OptimizerBatchSuccessiveHalving.R'
+    'OptimizerBatchHyperband.R'
+    'TunerBatchHyperband.R'
+    'TunerBatchSuccessiveHalving.R'
     'bibentries.R'
     'helper.R'
     'zzz.R'
