--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Authors@R: c(
            comment = c(ORCID = "0000-0001-6002-6980"))
   )
 Description: Successive Halving (Jamieson and Talwalkar (2016)
-    <arXiv:1502.07943>) and Hyperband (Li et al. 2018 <arXiv:1603.06560>)
+    <doi:10.48550/arXiv.1502.07943>) and Hyperband (Li et al. 2018 <doi:10.48550/arXiv.1603.06560>)
     optimization algorithm for the mlr3 ecosystem. The implementation in
     mlr3hyperband features improved scheduling and parallelizes the evaluation
     of configurations. The package includes tuners for hyperparameter
