--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mlr3hyperband
 Title: Hyperband for 'mlr3'
-Version: 0.5.0.9000
+Version: 0.6.0
 Authors@R: c(
     person("Marc", "Becker", , "marcbecker@posteo.de", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-8115-0400")),
@@ -14,7 +14,7 @@ Authors@R: c(
            comment = c(ORCID = "0000-0001-6002-6980"))
   )
 Description: Successive Halving (Jamieson and Talwalkar (2016)
-    <arXiv:1502.07943>) and Hyperband (Li et al. 2018 <arXiv:1603.06560>)
+    <doi:10.48550/arXiv.1502.07943>) and Hyperband (Li et al. 2018 <doi:10.48550/arXiv.1603.06560>)
     optimization algorithm for the mlr3 ecosystem. The implementation in
     mlr3hyperband features improved scheduling and parallelizes the evaluation
     of configurations. The package includes tuners for hyperparameter
@@ -25,10 +25,10 @@ URL: https://mlr3hyperband.mlr-org.com,
     https://github.com/mlr-org/mlr3hyperband
 BugReports: https://github.com/mlr-org/mlr3hyperband/issues
 Depends:
-    mlr3tuning (>= 0.20.0.9000),
+    mlr3tuning (>= 1.0.0),
     R (>= 3.1.0)
 Imports:
-    bbotk (>= 0.8.0.9000),
+    bbotk (>= 1.0.0),
     checkmate (>= 1.9.4),
     data.table,
     lgr,
@@ -43,9 +43,6 @@ Suggests:
     rpart,
     testthat (>= 3.0.0),
     xgboost
-Remotes:
-    mlr-org/mlr3tuning,
-    mlr-org/bbotk
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 Encoding: UTF-8
