--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,11 +48,13 @@ Config/testthat/parallel: true
 Encoding: UTF-8
 NeedsCompilation: no
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 Collate:
+    'OptimizerAsyncSuccessiveHalving.R'
     'aaa.R'
     'OptimizerBatchSuccessiveHalving.R'
     'OptimizerBatchHyperband.R'
+    'TunerAsyncSuccessiveHalving.R'
     'TunerBatchHyperband.R'
     'TunerBatchSuccessiveHalving.R'
     'bibentries.R'
