--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,12 +35,15 @@ Imports:
     mlr3 (>= 0.13.1),
     mlr3misc (>= 0.10.0),
     paradox (>= 0.9.0),
-    R6
+    R6,
+    uuid
 Suggests:
     emoa,
     mlr3learners (>= 0.5.2),
     mlr3pipelines,
     rpart,
+    redux,
+    rush,
     testthat (>= 3.0.0),
     xgboost
 Config/testthat/edition: 3
