--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,6 +46,8 @@ Suggests:
     rush,
     testthat (>= 3.0.0),
     xgboost
+Remotes:
+    mlr-org/rush@mirai
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 Encoding: UTF-8
