--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,7 +47,8 @@ Suggests:
     testthat (>= 3.0.0),
     xgboost
 Remotes:
-    mlr-org/rush@mirai
+    mlr-org/rush@mirai,
+    mlr-org/mlr3tuning@rush_reset
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 Encoding: UTF-8
