--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,7 +48,7 @@ Suggests:
     xgboost
 Remotes:
     mlr-org/rush@mirai,
-    mlr-org/mlr3tuning@rush_reset
+    mlr-org/mlr3tuning
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 Encoding: UTF-8
