feat: add OptimizerAsyncSuccessiveHalving (#116)
* draft

* ...

* feat: add OptimizerAsyncSuccessiveHalving

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,24 +35,32 @@ Imports:
     mlr3 (>= 0.13.1),
     mlr3misc (>= 0.10.0),
     paradox (>= 0.9.0),
-    R6
+    R6,
+    uuid
 Suggests:
     emoa,
     mlr3learners (>= 0.5.2),
     mlr3pipelines,
     rpart,
+    redux,
+    rush,
     testthat (>= 3.0.0),
     xgboost
+Remotes:
+    mlr-org/rush@mirai,
+    mlr-org/mlr3tuning
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 Encoding: UTF-8
 NeedsCompilation: no
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 Collate:
+    'OptimizerAsyncSuccessiveHalving.R'
     'aaa.R'
     'OptimizerBatchSuccessiveHalving.R'
     'OptimizerBatchHyperband.R'
+    'TunerAsyncSuccessiveHalving.R'
     'TunerBatchHyperband.R'
     'TunerBatchSuccessiveHalving.R'
     'bibentries.R'
