--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,10 +25,10 @@ URL: https://mlr3hyperband.mlr-org.com,
     https://github.com/mlr-org/mlr3hyperband
 BugReports: https://github.com/mlr-org/mlr3hyperband/issues
 Depends:
-    mlr3tuning (>= 1.0.0),
+    mlr3tuning (>= 1.4.0),
     R (>= 3.1.0)
 Imports:
-    bbotk (>= 1.0.0),
+    bbotk (>= 1.6.0),
     checkmate (>= 1.9.4),
     data.table,
     lgr,
@@ -43,12 +43,9 @@ Suggests:
     mlr3pipelines,
     rpart,
     redux,
-    rush,
+    rush (>= 0.2.0),
     testthat (>= 3.0.0),
     xgboost
-Remotes:
-    mlr-org/rush@mirai,
-    mlr-org/mlr3tuning
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 Encoding: UTF-8
