--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,7 +47,7 @@ Suggests:
     testthat (>= 3.0.0),
     xgboost
 Config/testthat/edition: 3
-Config/testthat/parallel: true
+Config/testthat/parallel: no
 Encoding: UTF-8
 NeedsCompilation: no
 Roxygen: list(markdown = TRUE)
