--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,12 +14,12 @@ Authors@R: c(
            comment = c(ORCID = "0000-0001-6002-6980"))
   )
 Description: Successive Halving (Jamieson and Talwalkar (2016)
-    <doi:10.48550/arXiv.1502.07943>) and Hyperband (Li et al. 2018 <doi:10.48550/arXiv.1603.06560>)
-    optimization algorithm for the mlr3 ecosystem. The implementation in
-    mlr3hyperband features improved scheduling and parallelizes the evaluation
-    of configurations. The package includes tuners for hyperparameter
-    optimization in mlr3tuning and optimizers for black-box optimization in
-    bbotk.
+    <doi:10.48550/arXiv.1502.07943>) and Hyperband (Li et al. 2018
+    <doi:10.48550/arXiv.1603.06560>) optimization algorithm for the mlr3
+    ecosystem. The implementation in mlr3hyperband features improved
+    scheduling and parallelizes the evaluation of configurations. The
+    package includes tuners for hyperparameter optimization in mlr3tuning
+    and optimizers for black-box optimization in bbotk.
 License: LGPL-3
 URL: https://mlr3hyperband.mlr-org.com,
     https://github.com/mlr-org/mlr3hyperband
@@ -42,8 +42,8 @@ Suggests:
     mirai,
     mlr3learners (>= 0.5.2),
     mlr3pipelines,
-    rpart,
     redux,
+    rpart,
     rush (>= 0.2.0),
     testthat (>= 3.0.0),
     xgboost
