--- a/.github/workflows/dev-cmd-check.yml
+++ b/.github/workflows/dev-cmd-check.yml
@@ -52,3 +52,4 @@ jobs:
       - uses: r-lib/actions/check-r-package@v2
         with:
           args: 'c("--no-manual", "--as-cran")'
+          error-on: '"note"'
